src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__relationships_many_to_many_include_root.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "peoples"
  },
  {
    "id": "[uuid]",
    "type": "author",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "related_type": "articles",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "author",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "related_type": "articles",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "author",
    "data": {
      "age": 34,
      "first-name": "Somebody",
      "gender": "F",
      "last-name": "Wuhu",
      "twitter": "@randomhandle"
    },
    "related_type": "articles",
    "related_id": "[uuid]"
  }
]
