src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__relationships_many_to_many_sparse_child.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "peoples"
  }
]
