src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__relationships_sort_and_sparse.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": null
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": null
  }
]
